RESOLVED FIXED25640
Crash on quit in r43384 nightly build on Leopard w/ Safari 4 beta installed
https://bugs.webkit.org/show_bug.cgi?id=25640
Summary Crash on quit in r43384 nightly build on Leopard w/ Safari 4 beta installed
David Smith
Reported 2009-05-07 23:27:22 PDT
Crashlog indicates that it's looking for waitForThreadCompletion and not finding it. Regression since r43335.
Attachments
Mark Rowe (bdash)
Comment 1 2009-05-07 23:29:30 PDT
Caused by the fix for bug 25348.
Mark Rowe (bdash)
Comment 2 2009-05-07 23:47:45 PDT
Rolled out in r43392.
Note You need to log in before you can comment on or make changes to this bug.