Fix <https://bugs.webkit.org/show_bug.cgi?id=25640>. Bug 25640: Crash on quit in r43384 nightly build on Leopard w/ Safari 4 beta installed

Rubber-stamped by Oliver Hunt.

Roll out r43366 as it removed symbols that Safari 4 Beta uses.

Canonical link: https://commits.webkit.org/35411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43392 268f45cc-cd09-0410-ab3c-d52691b4dbfc