JavaScriptCore/wtf/gtk/ThreadingGtk.cpp
@@ -42,19 +42,15 @@
 
 namespace WTF {
 
-bool ThreadIdentifier::operator==(const ThreadIdentifier& another) const
-{
-    return m_platformId == another.m_platformId;
-}
-
-bool ThreadIdentifier::operator!=(const ThreadIdentifier& another) const
-{
-    return m_platformId != another.m_platformId;
-}
-
 static Mutex* atomicallyInitializedStaticMutex;
 
 static ThreadIdentifier mainThreadIdentifier;
+
+static Mutex& threadMapMutex()
+{
+    static Mutex mutex;
+    return mutex;
+}
 
 void initializeThreading()
 {
@@ -64,6 +60,7 @@ void initializeThreading()
 
     if (!atomicallyInitializedStaticMutex) {
         atomicallyInitializedStaticMutex = new Mutex;
+        threadMapMutex();
         initializeRandomNumberGenerator();
         mainThreadIdentifier = currentThread();
         initializeMainThread();
@@ -81,15 +78,64 @@ void unlockAtomicallyInitializedStaticMutex()
     atomicallyInitializedStaticMutex->unlock();
 }
 
+static HashMap<ThreadIdentifier, GThread*>& threadMap()
+{
+    static HashMap<ThreadIdentifier, GThread*> map;
+    return map;
+}
+
+static ThreadIdentifier identifierByGthreadHandle(GThread*& thread)
+{
+    MutexLocker locker(threadMapMutex());
+
+    HashMap<ThreadIdentifier, GThread*>::iterator i = threadMap().begin();
+    for (; i != threadMap().end(); ++i) {
+        if (i->second == thread)
+            return i->first;
+    }
+
+    return 0;
+}
+
+static ThreadIdentifier establishIdentifierForThread(GThread*& thread)
+{
+    ASSERT(!identifierByGthreadHandle(thread));
+
+    MutexLocker locker(threadMapMutex());
+
+    static ThreadIdentifier identifierCount = 1;
+
+    threadMap().add(identifierCount, thread);
+
+    return identifierCount++;
+}
+
+static GThread* threadForIdentifier(ThreadIdentifier id)
+{
+    MutexLocker locker(threadMapMutex());
+
+    return threadMap().get(id);
+}
+
+static void clearThreadForIdentifier(ThreadIdentifier id)
+{
+    MutexLocker locker(threadMapMutex());
+
+    ASSERT(threadMap().contains(id));
+
+    threadMap().remove(id);
+}
+
 ThreadIdentifier createThreadInternal(ThreadFunction entryPoint, void* data, const char*)
 {
     GThread* thread;
     if (!(thread = g_thread_create(entryPoint, data, TRUE, 0))) {
         LOG_ERROR("Failed to create thread at entry point %p with data %p", entryPoint, data);
-        return ThreadIdentifier();
+        return 0;
     }
 
-    return ThreadIdentifier(thread);
+    ThreadIdentifier threadID = establishIdentifierForThread(thread);
+    return threadID;
 }
 
 void setThreadNameInternal(const char*)
@@ -98,14 +144,15 @@ void setThreadNameInternal(const char*)
 
 int waitForThreadCompletion(ThreadIdentifier threadID, void** result)
 {
-    ASSERT(threadID.isValid());
+    ASSERT(threadID);
 
-    GThread* thread = threadID.platformId();
+    GThread* thread = threadForIdentifier(threadID);
 
     void* joinResult = g_thread_join(thread);
     if (result)
         *result = joinResult;
 
+    clearThreadForIdentifier(threadID);
     return 0;
 }
 
@@ -115,7 +162,10 @@ void detachThread(ThreadIdentifier)
 
 ThreadIdentifier currentThread()
 {
-    return ThreadIdentifier(g_thread_self());
+    GThread* currentThread = g_thread_self();
+    if (ThreadIdentifier id = identifierByGthreadHandle(currentThread))
+        return id;
+    return establishIdentifierForThread(currentThread);
 }
 
 bool isMainThread()
