WebCore/platform/sql/SQLiteDatabase.cpp
@@ -47,6 +47,7 @@ SQLiteDatabase::SQLiteDatabase()
     : m_db(0)
     , m_pageSize(-1)
     , m_transactionInProgress(false)
+    , m_openingThread(0)
 {
 }
 
@@ -88,7 +89,7 @@ void SQLiteDatabase::close()
         m_db = 0;
     }
 
-    m_openingThread.invalidate();
+    m_openingThread = 0;
 }
 
 void SQLiteDatabase::setFullsync(bool fsync) 
