WebCore/workers/WorkerThread.cpp
@@ -68,7 +68,8 @@ PassRefPtr<WorkerThread> WorkerThread::create(const KURL& scriptURL, const Strin
 }
 
 WorkerThread::WorkerThread(const KURL& scriptURL, const String& userAgent, const String& sourceCode, WorkerObjectProxy* workerObjectProxy)
-    : m_workerObjectProxy(workerObjectProxy)
+    : m_threadID(0)
+    , m_workerObjectProxy(workerObjectProxy)
     , m_startupData(WorkerThreadStartupData::create(scriptURL, userAgent, sourceCode))
 {
 }
@@ -82,10 +83,12 @@ bool WorkerThread::start()
     // Mutex protection is necessary to ensure that m_threadID is initialized when the thread starts.
     MutexLocker lock(m_threadCreationMutex);
 
-    if (!m_threadID.isValid())
-        m_threadID = createThread(WorkerThread::workerThreadStart, this, "WebCore: Worker");
+    if (m_threadID)
+        return true;
 
-    return m_threadID.isValid();
+    m_threadID = createThread(WorkerThread::workerThreadStart, this, "WebCore: Worker");
+
+    return m_threadID;
 }
 
 void* WorkerThread::workerThreadStart(void* thread)
